--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,12 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "Build with GCC 13.1.0",
-            "command": "C:\\mingw64\\bin\\g++.exe",
+            "label": "C/C++: clang++.exe build active file",
+            "command": "C:\\mingw64\\bin\\clang++.exe",
             "args": [
-                "-fdiagnostics-color=always",
+                "-fcolor-diagnostics",
+                "-fansi-escape-codes",
                 "-g",
-                "-std=c++20",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
